[metadata]
name = pkgTest
version = 0.0.1
author = ChenChih.Lee
author_email=jacklee26@gmail.com
description = My first Python Hello world library
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/chenchih/PackageTest
license = MIT
classifiers = 
    Development Status :: 1 - Planning
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Operating System :: Unix
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows

[options]
include_package_data = True
packages = find:
install_requires = selenium

[options.package_data]
* =
    *.xml
    *.txt

